--- a/7_13_Build_your_own_GPT.ipynb
+++ b/7_13_Build_your_own_GPT.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOidJoigcQpTH2/aDGSo6Y3",
+      "authorship_tag": "ABX9TyP2GKe+6iQ9dw8Lr0irc0vF",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -50,7 +50,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": null,
+      "execution_count": 2,
       "metadata": {
         "id": "7rvphl_7TfMF"
       },
@@ -67,7 +67,7 @@
       "metadata": {
         "id": "W_5YLbx6T_sO"
       },
-      "execution_count": null,
+      "execution_count": 3,
       "outputs": []
     },
     {
@@ -78,7 +78,7 @@
       "metadata": {
         "id": "-STKuNyQayys"
       },
-      "execution_count": null,
+      "execution_count": 4,
       "outputs": []
     },
     {
@@ -89,19 +89,38 @@
       "metadata": {
         "id": "ZVUIwl3cbFMo"
       },
-      "execution_count": null,
+      "execution_count": 5,
       "outputs": []
     },
     {
       "cell_type": "code",
       "source": [
-        "transformers.__version__, accelerate.__version__"
+        "transformers.__version__ #, accelerate.__version__"
       ],
       "metadata": {
-        "id": "MUxie0Bqa2mn"
+        "id": "MUxie0Bqa2mn",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 35
+        },
+        "outputId": "37c6163e-0d4c-4159-ba1b-b686a45d7cef"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "'4.30.2'"
+            ],
+            "application/vnd.google.colaboratory.intrinsic+json": {
+              "type": "string"
+            }
+          },
+          "metadata": {},
+          "execution_count": 6
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -120,8 +139,8 @@
       "source": [
         "config = GPT2Config(\n",
         "    vocab_size= 131072,\n",
-        "    #n_positions=1024,\n",
-        "    #n_ctx=1024,\n",
+        "    n_positions=1024,\n",
+        "    n_ctx=1024,\n",
         "    n_embd=7680,\n",
         "    n_layer=70,\n",
         "    n_head=40,\n",
@@ -131,7 +150,7 @@
       "metadata": {
         "id": "XUY4TSTcUGiN"
       },
-      "execution_count": null,
+      "execution_count": 8,
       "outputs": []
     },
     {
@@ -145,7 +164,7 @@
       "metadata": {
         "id": "A0hFBPjxeG3F"
       },
-      "execution_count": null,
+      "execution_count": 9,
       "outputs": []
     },
     {
@@ -156,7 +175,7 @@
       "metadata": {
         "id": "JZ04Lav2U25n"
       },
-      "execution_count": null,
+      "execution_count": 10,
       "outputs": []
     },
     {
@@ -167,7 +186,7 @@
       "metadata": {
         "id": "NWt2fKf5VREl"
       },
-      "execution_count": null,
+      "execution_count": 11,
       "outputs": []
     },
     {
@@ -184,7 +203,10 @@
     {
       "cell_type": "code",
       "source": [
-        "dataset = load_dataset('text', data_files='https://raw.githubusercontent.com/karpathy/char-rnn/master/data/tinyshakespeare/input.txt')"
+        "from google.colab import files\n",
+        "uploaded = files.upload()\n",
+        "\n",
+        "dataset = load_dataset('text', data_files='text.txt')"
       ],
       "metadata": {
         "id": "y4jB79reWyMO"
@@ -195,10 +217,10 @@
     {
       "cell_type": "code",
       "source": [
-        "tokenized_dataset = dataset.map(lambda e: tokenizer(e['text'], truncation=True, padding='max_length'))"
+        "#print(dataset['train'][0])"
       ],
       "metadata": {
-        "id": "OVtyartoVVNz"
+        "id": "f8f80HAIuQyG"
       },
       "execution_count": null,
       "outputs": []
@@ -206,8 +228,31 @@
     {
       "cell_type": "code",
       "source": [
-        "print(tokenized_dataset)\n",
-        "print(dataset)"
+        "tokenized_dataset = dataset.map(lambda e: tokenizer(e['text'], truncation=True, padding='max_length'))"
+      ],
+      "metadata": {
+        "id": "OVtyartoVVNz",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "e6652ef0-a5fa-480a-d4f3-21e60b0fc036"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "WARNING:datasets.arrow_dataset:Loading cached processed dataset at /root/.cache/huggingface/datasets/text/default-bb7dc399605d5e3e/0.0.0/cb1e9bd71a82ad27976be3b12b407850fe2837d80c22c5e03a28949843a8ace2/cache-7c77dd160830fed1.arrow\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#print(tokenized_dataset)\n",
+        "#print(dataset)"
       ],
       "metadata": {
         "id": "8BDyfxysr2cy"
@@ -249,7 +294,7 @@
       "metadata": {
         "id": "AbGMgn1-YIM-"
       },
-      "execution_count": null,
+      "execution_count": 16,
       "outputs": []
     },
     {
@@ -265,10 +310,23 @@
         "trainer.train()"
       ],
       "metadata": {
-        "id": "xx_nNAI3bZhh"
+        "id": "xx_nNAI3bZhh",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "outputId": "234d4c0b-9b30-4d77-f34d-cdfd8d312d9b"
       },
       "execution_count": null,
-      "outputs": []
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stderr",
+          "text": [
+            "/usr/local/lib/python3.10/dist-packages/transformers/optimization.py:411: FutureWarning: This implementation of AdamW is deprecated and will be removed in a future version. Use the PyTorch implementation torch.optim.AdamW instead, or set `no_deprecation_warning=True` to disable this warning\n",
+            "  warnings.warn(\n"
+          ]
+        }
+      ]
     }
   ]
 }
